examTest/ns3.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sidecar-pod
  name: sidecar-pod
  namespace: ckad-ns3
spec:
  restartPolicy: Never

  volumes:
  - name: shared-data
    hostPath:
      path: /mydata

  containers:

  - name: nginx-container
    image: nginx
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: shared-data
      mountPath: /usr/share/nginx/html

  - name: busybox
    image: busybox
    volumeMounts:
    - name: shared-data
      mountPath: /var/log
    command: ["/bin/sh"]
    args: ["-c", "while sleep 5; do date > /var/log/date.log; done"]
