examTest/pv.yaml

apiVersion: v1
kind: Pod
metadata:
  name: 1311-pod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/webdata"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: 1311-pvc
