examTest/q2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine-pod
  name: alpine-pod
  namespace: ckad-ns2
spec:
  containers:
    - args:
      - sleep
      - "3600"
      image: alpine
      name: alpine-pod
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
