examTest/q6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webshop
    service: nginx
  name: webshop
spec:
  strategy: Recreate
  replicas: 5
  selector:
    matchLabels:
      app: webshop
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webshop
    spec:
      containers:
      - image: nginx:1.18
        name: nginx
        resources: {}
status: {}
